# autoproto

./: .gitignore  1.err  1.out  CMakeLists.txt  Doxyfile  ENGINEERING_PLAN.md  README.md  build.sh  format.ps1  format.sh  src.ps1  src.sh
benchmark/: CMakeLists.txt
examples/: channel_crawler.cpp  echo_bot.cpp  smoke_test.cpp  userbot.cpp
mtproto/: Client.cpp  Client.h
td/telegram/: AuthManager.cpp  AuthManager.h  ChainId.h  ConfigManager.cpp  ConfigManager.h  ConnectionState.h  DhCache.cpp  Global.cpp  Global.h  JsonValue.cpp  JsonValue.h  LanguagePackManager.h  MtprotoClient.cpp  MtprotoClient.h  SequenceDispatcher.cpp  SequenceDispatcher.h  StateManager.h  Td.cpp  Td.h  TdDb.h  UniqueId.h
td/telegram/files/: FileType.h
td/telegram/logevent/: LogEventHelper.cpp
td/telegram/net/: ConnectionCreator.cpp  NetActor.cpp  NetActor.h  NetQueryCreator.cpp  NetQueryCreator.h  NetQueryDispatcher.cpp  NetQueryVerifier.cpp  SessionProxy.cpp
tdutils/td/utils/port/detail/: PollableFd.h
test/: CMakeLists.txt
